--- a/documentation/AssumptionsAndSimulation.Rnw
+++ b/documentation/AssumptionsAndSimulation.Rnw
@@ -56,7 +56,7 @@ By Duffie, Pan, and Singleton (2000), for processes \(X_t\) defined as
 \[X_t=X_0+\int _0 ^ t \mu(X_s) ds + \int _0^t \sigma(X_s) dW_s+\sum_j ^ {N_t} Y_j\]
 with jump frequency \(\lambda(X_s)\), the following holds:
 
-\[g(u, x, t, T):=\mathbb{E}\left[e^{-\int_t ^ T R(X_s) ds} e^{cX_t}\right]\]
+\[g(u, x, t, T):=\mathbb{E}\left[e^{-\int_t ^ T R(X_s) ds} e^{cX_T}\right]\]
 
 has solution
 
@@ -80,7 +80,7 @@ The process \(v_t\) under \(\mathbb{\hat{P}}\) has this same structure with the 
 \[c=0\]
 
 Substituting and simplifying yields the following ODEs:
-\[\beta'(t) = -\psi(u) +\left(a+\delta \lambda \mathbb{E}[z_j]-iu\rho\sigma\eta \right) \beta(t)-\frac{\beta^2(t)\eta}{2}- \int_\Omega \left(e^{(\beta(t)\delta+iu) z} -e^{iu z}\right) \lambda \mu(dz) \]
+\[\beta'(t) = -\psi(u) +\left(a+\delta \lambda \mathbb{E}[z_j]-iu\rho\sigma\eta \right) \beta(t)-\frac{\beta^2(t)\eta^2}{2}- \int_\Omega \left(e^{(\beta(t)\delta+iu) z} -e^{iu z}\right) \lambda \mu(dz) \]
 \[\alpha'(t) = - a \beta(t) \]
 
 with \(\beta(T)=0,\,\alpha(T)=0\).
@@ -107,7 +107,7 @@ delta=1
 n=10000 #number of options to simulate
 m=1000 #number of items per path
 t=1
-dt=t/(m-1)
+dt=t/(m)
 simulateExpJump=function(numJumps){
   if(numJumps>0){
     return(delta*rexp(numJumps, lambda))
@@ -125,31 +125,45 @@ simulateGaussJump=function(numJumps){
     return(0)
   }
 }
-generateOptionPrice=function(m){
-  v=c(1:m)
-  s=c(1:m)
-  v[1]=v0
-  s[1]=s0
-  w2=rnorm(m-1)
-  w1=w2*rho+rnorm(m-1)*sqrt(1-rho*rho)
-  for(j in c(2:m)){
-    numJ=rpois(1, v[j-1]*lambda*dt)
-    s[j]=s[j-1]*exp(r*dt-sig*sig*.5*v[j-1]*dt+lambda*v[j-1]*dt*(exp(muL+.5*sigL*sigL)-1)+sqrt(v[j-1]*dt)*sig*w1[j-1]+simulateGaussJump(numJ))
-    v[j]=v[j-1]+a*(1-(delta*lambda/(a*q)+1)*v[j-1])*dt+eta*sqrt(abs(v[j-1])*dt)*w2[j-1]+simulateExpJump(numJ)
+generatePricePath=function(m, type){
+  #v=c(1:m)
+  #s=c(1:m)
+  #v[1]=v0
+  #s[1]=s0
+  s=s0
+  v=v0
+  w2=rnorm(m)
+  w1=w2*rho+rnorm(m)*sqrt(1-rho*rho)
+  for(j in c(1:m)){
+    #print(v*lambda*dt)
+    numJ=rpois(1, v*lambda*dt)
+    s=s*exp(r*dt-sig*sig*.5*v*dt+lambda*v*dt*(exp(muL+.5*sigL*sigL)-1)+sqrt(v*dt)*sig*w1[j]+simulateGaussJump(numJ))
+    v=v+a*(1-(delta*lambda/(a*q)+1)*v)*dt+eta*sqrt(abs(v)*dt)*w2[j]+simulateExpJump(numJ)
+   # print(v)
   }
-  if(s[j]>k){
-    return(s[j]-k)
+  if(type=='option'){
+    if(s>k){
+      return(s-k)
+    }
+    else{
+      return(0)
+    }
   }
   else{
-    return(0)
+    return(s)
   }
   
 }
 optionPrices=sapply(c(1:n), function(index){
-  return(generateOptionPrice(m))
+  return(generatePricePath(m, 'option'))
+})
+stockPrices=sapply(c(1:n), function(index){
+  return(generatePricePath(m, 'stock'))
 })
 price=exp(-r*t)*mean(optionPrices)
 price
+
+mean(stockPrices)*exp(-r*t)# should be 50 if a martingale
 
 @
 
