--- a/documentation/AssumptionsAndSimulation.Rnw
+++ b/documentation/AssumptionsAndSimulation.Rnw
@@ -1,17 +1,18 @@
 \documentclass{article}
 \usepackage{amsmath}
 \usepackage{amsfonts}
+\usepackage{hyperref}
 \begin{document}
 \SweaveOpts{concordance=TRUE}
 \setlength{\parindent}{0cm}
 
 
-\section{Assumptions}
+\section{Assumptions of the Levy Functions Repository}
 
 We combine the work by Carr and Wu (2004) and the work of Duffie, Pan, and Singleton (2000) to create a very general framework for jump diffusions and stochastic volatility.  Due to specification and calibration issues, we restrict our attention to jump-diffusions and do not consider processes with jumps of infinite activity.  
 
 \subsection{Specification of stochastic volatility}
-Following Carr and Wu, we specify the stochastic time change rather than directly specifying the volatility.  The time change is assumed to take the following form:
+Following Carr and Wu, we specify the stochastic time change rather than directly specifying the volatility.  The time change is assumed to take the following form: 
 
 \[\tau=\int_0^t v_s ds \]
 \[v_t=v_0 +\int_0^t a(1-k v_s) ds + \int_0^t \eta \sqrt{v_s} dW^2_s + \delta \sum_{j=1}^{N_t} z_j\]
@@ -45,7 +46,7 @@ Under \(\mathbb{\hat{P}}\), \(v_s\) has the following dynamics:
 
 Where \(\hat{N}_t\) has jump frequency \(v_s\lambda e^{iu y} \).  By Duffie, Pan, and Singleton (2000), such a characteristic function has a semi-analytical solution.  
 
-\subsection{ODE for characteristic function}
+\subsection{ODE for Characteristic Function}
 
 \subsubsection{General case}
 Consider the following functions:
@@ -69,7 +70,7 @@ where
 
 with \(\beta(T)=c,\,\alpha(T)=0\).
 
-\subsubsection{Application to this paper}
+\subsubsection{Application to the Analytical Characteristic Function}
 
 The process \(v_t\) under \(\mathbb{\hat{P}}\) has this same structure with the following parameters:
 
@@ -85,9 +86,19 @@ Substituting and simplifying yields the following ODEs:
 
 with \(\beta(T)=0,\,\alpha(T)=0\).
 
+
+\section{Methodology for Option Pricing}
+
+The methodology for option pricing uses the \href{http://engineering.nyu.edu/files/jcfpub.pdf}{Carr-Madan} framework, the 
+\href{https://tspace.library.utoronto.ca/bitstream/1807/19300/1/Surkov_Vladimir_200911_PhD_Thesis.pdf}{Fourier Space Time Step} framework, and the \href{http://ta.twi.tudelft.nl/mf/users/oosterle/oosterlee/COS.pdf}{Fang-Oosterlee} framework.  The code for these frameworks are in the \href{https://github.com/phillyfan1138/FFTOptionPricing}{FFTOptionPricing} repo.  
+
+\section{Methodology for Calibration}
+
+The methodology for calibration uses the \href{http://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.90.8837&rep=rep1&type=pdf}{Belomestny and Reiss} framework.  For more details and tests, see the FFTOptionPricing calibration \href{https://github.com/phillyfan1138/FFTOptionPricing/raw/master/docs/calibration/OptionCalibration.pdf}{documentation}.  
+
 \section{Simulation}
 
-To obtain an Monte Carlo estimate, we perform a simulation:
+To check that our option pricing methodology is implemented appropriately, we perform a Monte Carlo simulation:
 
 <<eval=FALSE>>=
 set.seed(42)
@@ -167,10 +178,7 @@ mean(stockPrices)*exp(-r*t)# should be 50 if a martingale
 
 @
 
-
-
-
-
+This simulation creates bounds that are used to ensure that the numerical implementation of the characteristic function is accurate.  For more details, see the integration tests inside the \href{https://github.com/phillyfan1138/levy-functions}{levy-functions} repo.  
 
 
 \end{document}
