--- a/documentation/AssumptionsAndSimulation.Rnw
+++ b/documentation/AssumptionsAndSimulation.Rnw
@@ -108,21 +108,20 @@ sig=.2
 sigL=.1
 muL=-.05
 rho=-.5
-q=10 #size of jump is .1 on average
 lambda=.5 #one jumps every two years on average
 a=.3
 eta=.2
 v0=.9
 s0=50
 k=50
-delta=1
-n=10000 #number of options to simulate
-m=100000 #number of items per path
+delta=.1
+n=100000 #number of options to simulate
+m=10000 #number of items per path
 t=1
 dt=t/(m)
 simulateExpJump=function(numJumps){
   if(numJumps>0){
-    return(sum(delta*rexp(numJumps, q)))
+    return(sum(delta*rexp(numJumps, 1.0))) #average of 1
   }
   else{
     return(0)
@@ -147,7 +146,7 @@ generatePricePath=function(m, type){
   for(j in c(1:m)){
     numJ=rpois(1, v*lambda*dt)
     s=s*exp(r*dt-sig*sig*.5*v*dt-lambda*v*dt*(exp(muL+.5*sigL*sigL)-1)+sqrt(abs(v)*dt)*sig*w1[j]+simulateGaussJump(numJ))
-    v=v+a*(1-(delta*lambda/(a*q)+1)*v)*dt+eta*sqrt(abs(v)*dt)*w2[j]+simulateExpJump(numJ)
+    v=v+a*(1-(delta*lambda/a+1)*v)*dt+eta*sqrt(abs(v)*dt)*w2[j]+simulateExpJump(numJ)
    # sPath=c(sPath, s)
   }
   #plot(sPath, type='l')
